Refactor: Change Dall-E to Stability AI